--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=restApi
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/employee_directory
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+ spring.main.banner-mode=off
+ logging.level.root=off
