--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=restApi
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/employee_directory
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
+spring.datasource.username=root
+spring.datasource.password=Skhirate_88
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
- spring.main.banner-mode=off
- logging.level.root=off
+
+spring.main.banner-mode=off
+logging.level.root=off
+spring.data.rest.base-path=/magic-api
