Using Spring Data Resr. Remving the constoller and services packages. Adding a /api base path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
  spring.main.banner-mode=off
  logging.level.root=off
+spring.data.rest.base-path=/api
