using custom tables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.security.user.name=scott
 spring.security.user.password=somePassword
 
+####### Logging level #########
+
+
+
