Creating adding   employee functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # spring.main.banner-mode=off
-# logging.level.root=off
+ logging.level.root=off
