--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# spring.main.banner-mode=off
- logging.level.root=off
+spring.main.banner-mode=off
+logging.level.root=off
+logging.level.org.springframework.boot=INFO
