--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.main.banner-mode=off
 logging.level.root=off
-logging.level.org.springframework.boot=INFO
+logging.level.org.springframework.boot=DEBUG
