Adding registration functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.main.banner-mode=off
-logging.level.root=off
-logging.level.org.springframework.boot=DEBUG
+
+#logging.level.org.springframework.boot=DEBUG or TRACE for detail
+logging.level.org.springframework.boot=INFO
